--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: php
 
 php:
-  - 5.4
-  - 5.5
   - 5.6
   - 7.0
   - 7.1
+  - 7.2
   - hhvm
 
 env:
@@ -13,12 +12,12 @@ env:
     - CODE_COVERAGE=false
 
   matrix:
-      - MAGENTO_VERSION=magento-mirror-1.9.3.8
+      - MAGENTO_VERSION=magento-mirror-1.9.3.10
 
 matrix:
   include:
     - php: 7.0
-      env: MAGENTO_VERSION=magento-mirror-1.9.3.8 CODE_COVERAGE=true
+      env: MAGENTO_VERSION=magento-mirror-1.9.3.10 CODE_COVERAGE=true
     - php: 7.0
       env: MAGENTO_VERSION=magento-mirror-1.9.2.4
     - php: 7.0
@@ -30,6 +29,7 @@ matrix:
 
   allow_failures:
   - php: 7.1
+  - php: 7.2
   - php: hhvm
   - php: nightly
 
