--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
         "issues": "http://servicedesk.tig.nl/hc/nl/requests/new"
     },
     "homepage": "https://tig.nl/buckaroo",
-    "version" : "v4.21.0-RC3",
-    "minimum-stability": "rc"
+    "version" : "v4.21.0-RC4",
+    "minimum-stability": "RC"
 }
